# 6502

./: Cargo.toml
core/: Cargo.toml
core/src/: main.rs
cpu/: Cargo.toml
cpu/src/: lib.rs  opcode.rs
emulator/: Cargo.toml
emulator/src/: build.rs  lib.rs  main.rs  model.rs  model_renderer.rs  resources.rs  shader.wgsl  texture.rs  ui_scene.rs  ui_shader.wgsl  vertex.rs
